<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.resetPassword.view.ResetPasswordActivity">

    <com.example.mylibrary.ds.toolbar.DsToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mylibrary.ds.text.DsText
        android:id="@+id/reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        app:dsTextStyle="header"
        android:text="@string/reset_password_title"
        android:contentDescription="@string/reset_password_title"
        android:importantForAccessibility="yes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.mylibrary.ds.text.DsText
        android:id="@+id/reset_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:dsTextStyle="description"
        app:dsFontWeight="regular"
        android:textSize="14sp"
        android:text="@string/reset_password_subtitle"
        android:contentDescription="@string/reset_password_subtitle"
        android:importantForAccessibility="yes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_title" />

    <com.example.mylibrary.ds.input.DsInput
        android:id="@+id/reset_input_focus_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/reset_password_hint_email"
        app:inputKeyboardType="email"
        android:importantForAccessibility="yes"
        app:layout_constraintTop_toBottomOf="@+id/reset_subtitle" />

    <com.example.mylibrary.ds.button.DsButton
        android:id="@+id/reset_button_click_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:textDS="@string/reset_password_button_title"
        android:contentDescription="@string/reset_password_accessibility_button"
        android:importantForAccessibility="yes"
        android:clickable="true"
        android:focusable="true"
        android:addStatesFromChildren="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_input_focus_email"/>

    <ProgressBar
        android:id="@+id/progressBar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>